--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="689daf">  <td>23/02/20 09:04:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="pdfReader.PDFReader()[pri:0, instance:test.selenium.pdfReader@4d154ccd]">PDFReader</td> 
-  <td>main@335708295</td>   <td></td> </tr>
-<tr bgcolor="689daf">  <td>23/02/20 09:03:52</td>   <td>-16227</td> <td>&nbsp;</td><td title="&gt;&gt;pdfReader.setup()[pri:0, instance:test.selenium.pdfReader@4d154ccd]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
-<tr bgcolor="689daf">  <td>23/02/20 09:04:11</td>   <td>3088</td> <td>&nbsp;</td><td title="&lt;&lt;pdfReader.tearDown()[pri:0, instance:test.selenium.pdfReader@4d154ccd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
+<tr bgcolor="87a792">  <td>23/02/21 17:02:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="pdfReader.Reader()[pri:0, instance:test.selenium.pdfReader@46cdf8bd]">Reader</td> 
+  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="87a792">  <td>23/02/21 17:02:33</td>   <td>7132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="pdfReader.ReaderSameBrowserTab()[pri:0, instance:test.selenium.pdfReader@46cdf8bd]">ReaderSameBrowserTab</td> 
+  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="87a792">  <td>23/02/21 17:02:17</td>   <td>-9269</td> <td>&nbsp;</td><td title="&gt;&gt;pdfReader.setup()[pri:0, instance:test.selenium.pdfReader@46cdf8bd]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="87a792">  <td>23/02/21 17:03:06</td>   <td>40073</td> <td>&nbsp;</td><td title="&lt;&lt;pdfReader.tearDown()[pri:0, instance:test.selenium.pdfReader@46cdf8bd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
 </table>
